[package]
name = "nicotine-ingest"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.9"
actix-http = "3.9"
serde = { version = "1.0", features = ["derive"] }
jsonwebtoken = "9.3"
bcrypt = "0.15"
env_logger = "0.11"
log = "0.4"
influxdb2 = "0.5.2"
serde_json = "1.0.140"
futures = "0.3.31"
chrono = "0.4.41"